src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__fb_accepts_empty_statement_as_input_param.snap
---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%fb_t = type { i32, i32 }
%main = type { %fb_t }

@__fb_t__init = unnamed_addr constant %fb_t zeroinitializer
@main_instance = global %main zeroinitializer

define void @fb_t(%fb_t* %0) {
entry:
  %this = alloca %fb_t*, align [filtered]
  store %fb_t* %0, %fb_t** %this, align [filtered]
  %in1 = getelementptr inbounds %fb_t, %fb_t* %0, i32 0, i32 0
  %in2 = getelementptr inbounds %fb_t, %fb_t* %0, i32 0, i32 1
  ret void
}

define void @main(%main* %0) {
entry:
  %fb = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %1 = getelementptr inbounds %fb_t, %fb_t* %fb, i32 0, i32 0
  store i32 1, i32* %1, align [filtered]
  call void @fb_t(%fb_t* %fb)
  ret void
}
