src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__fb_accepts_empty_statement_as_output_param.snap
---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%fb_t = type { i32, i32 }
%main = type { %fb_t, i32 }

@__fb_t__init = unnamed_addr constant %fb_t zeroinitializer
@main_instance = global %main zeroinitializer

define void @fb_t(%fb_t* %0) {
entry:
  %this = alloca %fb_t*, align [filtered]
  store %fb_t* %0, %fb_t** %this, align [filtered]
  %out1 = getelementptr inbounds %fb_t, %fb_t* %0, i32 0, i32 0
  %out2 = getelementptr inbounds %fb_t, %fb_t* %0, i32 0, i32 1
  ret void
}

define void @main(%main* %0) {
entry:
  %fb = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %x = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  call void @fb_t(%fb_t* %fb)
  %1 = getelementptr inbounds %fb_t, %fb_t* %fb, i32 0, i32 0
  %2 = load i32, i32* %1, align [filtered]
  store i32 %2, i32* %x, align [filtered]
  ret void
}
