src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__function_accepts_empty_statement_as_input_param.snap
---
source: src/codegen/tests/parameters_tests.rs
assertion_line: 593
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type {}

@main_instance = global %main zeroinitializer

define void @foo(i32 %0, i32 %1) {
entry:
  %in1 = alloca i32, align [filtered]
  store i32 %0, ptr %in1, align [filtered]
  %in2 = alloca i32, align [filtered]
  store i32 %1, ptr %in2, align [filtered]
  ret void
}

define void @main(ptr %0) {
entry:
  call void @foo(i32 1, i32 0)
  ret void
}
