src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__function_accepts_empty_statement_as_output_param.snap
---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i32 }

@main_instance = global %main zeroinitializer

define void @foo(ptr %0, ptr %1) {
entry:
  %out1 = alloca ptr, align [filtered]
  store ptr %0, ptr %out1, align [filtered]
  %out2 = alloca ptr, align [filtered]
  store ptr %1, ptr %out2, align [filtered]
  %2 = load ptr, ptr %out1, align [filtered]
  store i32 0, ptr %2, align [filtered]
  %3 = load ptr, ptr %out2, align [filtered]
  store i32 0, ptr %3, align [filtered]
  ret void
}

define void @main(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %1 = alloca i32, align [filtered]
  call void @foo(ptr %x, ptr %1)
  ret void
}
