src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__parameters_behind_function_block_pointer_are_assigned_to.snap
---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { %file_t, %file_t* }
%file_t = type { i8, i8 }

@main_instance = global %main zeroinitializer
@__file_t__init = unnamed_addr constant %file_t zeroinitializer

define void @main(%main* %0) {
entry:
  %file = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %FileOpen = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  store %file_t* %file, %file_t** %FileOpen, align [filtered]
  %deref = load %file_t*, %file_t** %FileOpen, align [filtered]
  %1 = getelementptr inbounds %file_t, %file_t* %deref, i32 0, i32 1
  store i8 1, i8* %1, align [filtered]
  call void @file_t(%file_t* %deref)
  ret void
}

define void @file_t(%file_t* %0) {
entry:
  %this = alloca %file_t*, align [filtered]
  store %file_t* %0, %file_t** %this, align [filtered]
  %var1 = getelementptr inbounds %file_t, %file_t* %0, i32 0, i32 0
  %var2 = getelementptr inbounds %file_t, %file_t* %0, i32 0, i32 1
  ret void
}
