src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__program_accepts_empty_statement_as_input_param.snap
---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prog = type { i32, i32 }
%main = type {}

@prog_instance = global %prog zeroinitializer
@main_instance = global %main zeroinitializer

define void @prog(%prog* %0) {
entry:
  %in1 = getelementptr inbounds %prog, %prog* %0, i32 0, i32 0
  %in2 = getelementptr inbounds %prog, %prog* %0, i32 0, i32 1
  ret void
}

define void @main(%main* %0) {
entry:
  store i32 1, i32* getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 0), align [filtered]
  call void @prog(%prog* @prog_instance)
  ret void
}
