src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__program_accepts_empty_statement_as_output_param.snap
---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prog = type { i32, i32 }
%main = type { i32 }

@prog_instance = global %prog zeroinitializer
@main_instance = global %main zeroinitializer

define void @prog(%prog* %0) {
entry:
  %out1 = getelementptr inbounds %prog, %prog* %0, i32 0, i32 0
  %out2 = getelementptr inbounds %prog, %prog* %0, i32 0, i32 1
  store i32 1, i32* %out1, align [filtered]
  store i32 2, i32* %out2, align [filtered]
  ret void
}

define void @main(%main* %0) {
entry:
  %x = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  call void @prog(%prog* @prog_instance)
  %1 = load i32, i32* getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 0), align [filtered]
  store i32 %1, i32* %x, align [filtered]
  ret void
}
