src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__program_all_parameters_assigned_explicit.snap
---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prog = type { i32, i32, i32* }
%main = type { i32, i32, i32 }

@prog_instance = global %prog zeroinitializer
@main_instance = global %main zeroinitializer

define void @prog(%prog* %0) {
entry:
  %input1 = getelementptr inbounds %prog, %prog* %0, i32 0, i32 0
  %output1 = getelementptr inbounds %prog, %prog* %0, i32 0, i32 1
  %inout1 = getelementptr inbounds %prog, %prog* %0, i32 0, i32 2
  ret void
}

define void @main(%main* %0) {
entry:
  %var1 = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %var2 = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %var3 = getelementptr inbounds %main, %main* %0, i32 0, i32 2
  %load_var1 = load i32, i32* %var1, align [filtered]
  store i32 %load_var1, i32* getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 0), align [filtered]
  store i32* %var3, i32** getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 2), align [filtered]
  call void @prog(%prog* @prog_instance)
  %1 = load i32, i32* getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 1), align [filtered]
  store i32 %1, i32* %var2, align [filtered]
  store i32* %var3, i32** getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 2), align [filtered]
  %load_var11 = load i32, i32* %var1, align [filtered]
  store i32 %load_var11, i32* getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 0), align [filtered]
  call void @prog(%prog* @prog_instance)
  %2 = load i32, i32* getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 1), align [filtered]
  store i32 %2, i32* %var2, align [filtered]
  ret void
}
